<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kumuluz.ee.graphql</groupId>
    <artifactId>kumuluzee-graphql-parent</artifactId>
    <version>1.0.1</version>

    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>graphql-ui</module>
    </modules>

    <name>KumuluzEE GraphQL Parent</name>

    <description>
        KumuluzEE GraphQL extension provides a layer around GraphQL server, that enables rapid schema development.
    </description>

    <inceptionYear>2018</inceptionYear>

    <url>https://ee.kumuluz.com</url>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kumuluzee.version>3.2.0</kumuluzee.version>
        <graphql-java.version>11.0</graphql-java.version>
        <gson.version>2.8.5</gson.version>
        <spqr.version>0.9.9</spqr.version>
        <kumuluzee-rest.version>1.2.3</kumuluzee-rest.version>
        <jaxb-api.version>2.3.0</jaxb-api.version>

        <nexus.staging.plugin.version>1.6.8</nexus.staging.plugin.version>
        <gpg.plugin.version>1.6</gpg.plugin.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:kumuluz/kumuluzee-graphql.git</connection>
        <developerConnection>scm:git:git@github.com:kumuluz/kumuluzee-graphql.git</developerConnection>
        <url>git@github.com:kumuluz/kumuluzee-graphql.git</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/kumuluz/kumuluzee-graphql/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>Domen Kajdič</name>
            <id>evader1337</id>
            <url>https://github.com/evader1337</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>WEB_INF://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.graphql-java</groupId>
                <artifactId>graphql-java</artifactId>
                <version>${graphql-java.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>io.leangen.graphql</groupId>
                <artifactId>spqr</artifactId>
                <version>${spqr.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kumuluz.ee.rest</groupId>
                <artifactId>kumuluzee-rest-core</artifactId>
                <version>${kumuluzee-rest.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java9-modules</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                    <version>${jaxb-api.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus.staging.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <proc>none</proc>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-important-processor</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <proc>none</proc>
                            <testIncludes>
                                <include>com/kumuluz/ee/graphql/processor/*</include>
                            </testIncludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>